# debian-library-abi-checker

./: CMakeLists.txt  README.md
debian/: README  changelog  control  libfoo0.acc.in  rules
include/: CMakeLists.txt
include/foo/: foo.hpp
lib/: CMakeLists.txt
src/: foo.cpp
